[package]
name = "dischart"
version = "0.0.1"
description = "A Distance Chart App"
authors = ["windlx"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["dialog-all", "fs-read-file", "fs-remove-file", "fs-write-file", "path-all", "protocol-asset", "shell-open", "window-close", "window-set-title"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.17"
office = "0.8.1"
tokio = "1.25.0"
tokio-util = "0.7.7"
regex = "1.7.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
